nohup_output.log
[INFO][20:54:48][_internal.py][line:87]  * Running on https://127.0.0.1:5001/ (Press CTRL+C to quit)
[INFO][20:54:48][_internal.py][line:87]  * Restarting with stat
[WARNING][20:54:48][_internal.py][line:87]  * Debugger is active!
[INFO][20:54:48][_internal.py][line:87]  * Debugger PIN: 800-832-600
[INFO][21:04:01][_internal.py][line:87]  * Detected change in '/home/ubuntu/WorkStation/Test_1_RestFulApi/app/main/views.py', reloading
[INFO][21:04:01][_internal.py][line:87]  * Restarting with stat
Traceback (most recent call last):
  File "/home/ubuntu/WorkStation/Test_1_RestFulApi/manage.py", line 4, in <module>
    app = create_app('default')
  File "/home/ubuntu/WorkStation/Test_1_RestFulApi/app/__init__.py", line 51, in create_app
    from .main import main as main_blueprint
  File "/home/ubuntu/WorkStation/Test_1_RestFulApi/app/main/__init__.py", line 5, in <module>
    from . import views
  File "/home/ubuntu/WorkStation/Test_1_RestFulApi/app/main/views.py", line 1
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
